--- a/.github/workflows/manual.yml
+++ b/.github/workflows/manual.yml
@@ -1,5 +1,5 @@
 # This is a basic workflow that is manually triggered
-
+Date : Sunday 19 July 2020
 name: Manual workflow
 
 # Controls when the action will run. Workflow runs when manually triggered using the UI
